# icons

./: .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  Taskfile.yml  go.work.sum  package-lock.json  package.json  requirements.txt  vite.config.ts
.github/workflows/: build.yml  docker.yml  lint.yml
client/: .gitignore  Taskfile.yml  deno.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
client/public/: robots.txt
client/src/: App.tsx  AppWrapper.tsx  main.tsx
client/src/components/: ColorCube.tsx  ColorPickerButton.tsx  PreviewIcon.tsx  SelectIconButton.tsx  useColorPickerStyles.ts  useDark.ts
client/src/controls/: ChangeCenterColor.tsx  ChangeDark.tsx  ChangeFrameColor.tsx  ChangeLanguage.tsx  ChangeModifierColor.tsx  ChooseIcon.tsx  ChooseModifier.tsx  ChoosePalette.tsx  CopyUrl.tsx  GotoGitHub.tsx  IconOption.tsx  Preview.tsx
client/src/data/: api.ts  (+2 more)
docker/: Dockerfile
public/: index.html  manifest.json
scripts/: build.py  clean.py  colorize.py  iconio.py  make.py  palette.py  t.py  test_icon.py
server/: .gitignore  Dockerfile  Taskfile.yml  env.go  go.mod  go.sum  icon.go  main.go  palette.go
service/: main.py  palettes.yaml
src/: App.tsx  ColorPickerButton.tsx  IconButton.tsx  api.ts  index.html  index.tsx  main.rs  main.tsx  palettes.json  palettes.yaml  proxy.ts
src/components/: App.tsx  ColorPickerButton.tsx  IconButton.tsx  Section.tsx  index.ts
src/data/: api.ts  color.ts  index.ts
src/server/: icon.rs  mod.rs  palette.rs  state.rs
(+3 files in other folders)
