[package]
name = "pistonite-icons"
version = "0.1.0"
edition = "2021"
default-run = "start"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
http-types = "2.12.0"
image = "0.24.6"
log = "0.4.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
simple_logger = "4.1.0"
tide = "0.16.0"

[[bin]]
name = "start"
path = "src/main.rs"

